Fix reversed parameters for FaviconForUrl.

History/Bookmark/ReadingList/RecentTabs are getting favicons by calling
FaviconLoader::FaviconForUrl with reversed parameter "size" and
"min_size".

Bug: 916135
Change-Id: I79b4a3e2677d49b15ddcd9e44aca7e2bc2d93e42
Reviewed-on: https://chromium-review.googlesource.com/c/1382498
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Yi Su <mrsuyi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617545}
Former-commit-id: a4b960dbe46c2ee541af6e9811fdea78c63563d0