ios/chrome/browser/ui/history/history_mediator.mm
@@ -43,7 +43,7 @@ const CGFloat kFaviconMinWidthHeight = 16;
 - (FaviconAttributes*)faviconForURL:(const GURL&)URL
                          completion:(void (^)(FaviconAttributes*))completion {
   FaviconAttributes* cachedAttributes = self.faviconLoader->FaviconForUrl(
-      URL, kFaviconMinWidthHeight, kFaviconWidthHeight,
+      URL, kFaviconWidthHeight, kFaviconMinWidthHeight,
       /*fallback_to_google_server=*/false, ^(FaviconAttributes* attributes) {
         completion(attributes);
       });
