ios/chrome/browser/ui/recent_tabs/recent_tabs_mediator.mm
@@ -120,7 +120,7 @@ const CGFloat kFaviconMinWidthHeight = 16;
   FaviconLoader* faviconLoader =
       IOSChromeFaviconLoaderFactory::GetForBrowserState(self.browserState);
   FaviconAttributes* cachedAttributes = faviconLoader->FaviconForUrl(
-      URL, kFaviconMinWidthHeight, kFaviconWidthHeight,
+      URL, kFaviconWidthHeight, kFaviconMinWidthHeight,
       /*fallback_to_google_server=*/false, ^(FaviconAttributes* attributes) {
         completion(attributes);
       });
